# bildzitate

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  default.env  pyproject.toml  requirements.txt  start-server.sh
.github/workflows/: starter.yaml
appcreator/: code_templates.py  import_utils.py
appcreator/management/commands/: import_data.py
archiv/: admin.py  dal_urls.py  dal_views.py  filters.py  forms.py  models.py  tables.py  urls.py  utils.py  views.py
archiv/management/commands/: finish_import.py
archiv/migrations/: 0001_initial.py  0002_person_author_of_person_painter_of_and_more.py  0003_alter_text_options.py  0004_alter_person_painter_of.py
archiv/templates/archiv/: artwork_detail.html  generic_detail.html  generic_list.html
djangobaseproject/: settings.py  urls.py
infos/: models.py  views.py
infos/templates/infos/: about.html
templates/: base.html
templates/partials/: footer.html  head.html  navbar.html
webpage/: metadata.py
webpage/templates/webpage/: imprint.html  index.html
