[project]
name = "bildzitate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acdh-django-browsing>=3.2",
    "django>=5.2.7",
    "django-autocomplete-light>=3.12.1",
    "django-extensions>=4.1",
    "django-next-prev>=1.1.0",
    "django-spaghetti-and-meatballs>=0.4.2",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "tqdm>=4.67.1",
]
